--- a/RL2.ipynb
+++ b/RL2.ipynb
@@ -39,6 +39,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SGD' from 'keras.optimizers' (/home/olaf/anaconda3/envs/master/lib/python3.9/site-packages/keras/optimizers.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdynamicgem\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membedding\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mae_static\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AE\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdynamicgem\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_generation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m dynamic_SBM_graph\n\u001b[1;32m      3\u001b[0m node_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/master/lib/python3.9/site-packages/dynamicgem/embedding/ae_static.py:22\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Input, Dense, Lambda, merge, Subtract\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Model, model_from_json\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SGD, Adam\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m backend \u001b[38;5;28;01mas\u001b[39;00m KBack\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SGD' from 'keras.optimizers' (/home/olaf/anaconda3/envs/master/lib/python3.9/site-packages/keras/optimizers.py)"
+     ]
+    }
+   ],
+   "source": [
+    ">>> from dynamicgem.embedding.ae_static import AE\n",
+    ">>> from dynamicgem.graph_generation import dynamic_SBM_graph\n",
+    ">>> node_num = 1000\n",
+    ">>> community_num = 2\n",
+    ">>> node_change_num = 10\n",
+    ">>> length =5\n",
+    ">>> dynamic_sbm_series = dynamic_SBM_graph.get_community_diminish_series_v2(node_num,\n",
+    "                                                                        community_num,\n",
+    "                                                                        length,\n",
+    "                                                                        1,\n",
+    "                                                                        node_change_num)\n",
+    ">>> embedding = AE(d=dim_emb,\n",
+    "               beta=5,\n",
+    "               nu1=1e-6,\n",
+    "               nu2=1e-6,\n",
+    "               K=3,\n",
+    "               n_units=[500, 300, ],\n",
+    "               n_iter=epochs,\n",
+    "               xeta=1e-4,\n",
+    "               n_batch=100,\n",
+    "               modelfile=['./intermediate/enc_modelsbm.json',\n",
+    "                          './intermediate/dec_modelsbm.json'],\n",
+    "               weightfile=['./intermediate/enc_weightssbm.hdf5',\n",
+    "                           './intermediate/dec_weightssbm.hdf5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
